<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PTA APP</string>
    <string name="Login">LOGIN</string>
    <string name="Register">REGISTER</string>
    <string name="Email_label">Email</string>
    <string name="Password_label">Password</string>
    <string name="Nama_label">Nama</string>
    <string name="Alamat_label">Alamat</string>
    <string name="username">Username</string>
    <string name="users">Pengguna</string>
    <string name="input_name">Nama</string>
    <string name="input_nip">NIP</string>
    <string name="input_role">Role</string>
    <string name="input_no_handphone">Nomer Handphone</string>
    <string name="input_golongan">Golongan</string>
    <string name="input_jabatan">Jabatan</string>
    <string name="input_masa_kerja">Masa Kerja (Bulan)</string>
    <string name="input_max_cuti">Maximun Cuti</string>
    <string name="input_atasan">Atasan</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="simpan">Simpan</string>
    <string name="pendaftaran_akun">Daftar Akun</string>
    <string name="in_alasan">Detail Alasan</string>
    <string name="in_alamat">Alamat</string>
    <string name="pilih_tanggal_cuti">Pilih Tanggal</string>
    <string name="penting">Penting?</string>
    <string name="cuti_info">\"Cuti anda sisa : \"</string>
    <string name="type_alasan">Tipe Alasan</string>
    <string name="text_print">Print</string>
    <string name="text_share">Bagikan</string>
    <string name="text_generated_file_error">Generator PDF Error</string>
    <string name="download">Download</string>
    <string name="input_pejabat">Pejabat</string>
    <string name="tanda_tangan">Tanda Tangan</string>


    <string-array name="bulan_mulai">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
</resources>
